# thecompareimagecode

cut_tool/: cut  cut.go  cut2  cut2.go
untitled5/: CMakeLists.txt  main.cpp
untitled5/Thecompare/: Thecompare.cpp  Thecompare.h
untitled5/Theimageclass/: Theimage.cpp  Theimage.h
untitled5/opencv2/: cvconfig.h
